// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when target is react-native 1`] = `
Object {
  "globals": Object {
    "__MOXY_JEST_CONFIG_ENZYME_ADAPTER__": "enzyme-adapter-react-16",
    "foo": "bar",
  },
  "setupFilesAfterEnv": Array [
    "foo",
    "<PROJECT_ROOT>/lib/enhancers/with-enzyme/setup.js",
    "<PROJECT_ROOT>/lib/enhancers/with-enzyme/setup-react-native.js",
  ],
  "testEnvironment": "jsdom",
}
`;

exports[`should match snapshot when target is web 1`] = `
Object {
  "globals": Object {
    "__MOXY_JEST_CONFIG_ENZYME_ADAPTER__": "enzyme-adapter-react-16",
    "foo": "bar",
  },
  "setupFilesAfterEnv": Array [
    "foo",
    "<PROJECT_ROOT>/lib/enhancers/with-enzyme/setup.js",
    "<PROJECT_ROOT>/lib/enhancers/with-enzyme/setup-web.js",
  ],
  "testEnvironment": "jsdom",
}
`;
